// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<DocumentFragment>
  <span
    class="byway-card"
  >
    <a
      class="link-offset-2 link-underline link-underline-opacity-0"
      href="/byways/Great River Road"
    >
      <h3
        class="byway-card-name"
      >
        Great River Road
      </h3>
      <img
        alt="Great River Road"
        class="byway-card-image"
        src="https://fhwaapps.fhwa.dot.gov/bywaysp/uploads/asset_files/2279/82535_1-4Effigy%20Mounds%20National%20Monument%20Fire%20Point1_sq.jpg"
      />
      <h4
        class="byway-card-designation"
      >
        All-American Road
      </h4>
    </a>
  </span>
</DocumentFragment>
`;

exports[`matches snapshot 2`] = `
<DocumentFragment>
  <span
    class="byway-card"
  >
    <a
      class="link-offset-2 link-underline link-underline-opacity-0"
      href="/byways/undefined"
    >
      <h3
        class="byway-card-name"
      />
      <img
        class="byway-card-image"
      />
      <h4
        class="byway-card-designation"
      />
    </a>
  </span>
</DocumentFragment>
`;
